--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <canvas id="canvas"></canvas>
+    <div id="canvasZone"><canvas id="renderCanvas"></canvas></div>
 
     <script src="script.js"></script>
 </body>
