--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.babylonjs.com/proceduralTexturesLibrary/babylonjs.proceduralTextures.min.js"></script>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="icons8-favicon-96.png">
 </head>
 
 <body>
